--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>Guess the Number!</h1>
-   </body>
+<head>
+</head>
+<body>
+
+    <h1> Guess the Number!</h1>
+
+    <script>
+
+        let num = Math.floor(Math.random() * 11);
+        let guess = prompt("guess a number between 1 and 10");
+        let gotIt = false;
+        let numGuesses = 0;
+
+        while(gotIt === false){
+            numGuesses++;
+
+                if(num == guess)
+            {
+                // alert("Got it!");
+                gotIt = true;// breakout of loop
+            }else{ // continue, since answer is incorrect!
+
+                if(num > guess){// higher?
+                    guess = prompt("Higher");
+
+                }else{//lower?
+                    guess = prompt("Lower");
+
+                }
+                // guess = prompt("Nope");
+            }
+
+        }
+
+        alert("Finally. That took " + numGuesses + " tries");
+        // alert("Sorry!  You guessed " + guess + " and the number was " + num);
+
+    </script>
+
+</body>
 </html>
